Update following fix to uma-user-agent

--- a/demoroot/notebooks/ADES calling Workspace Flow.ipynb
+++ b/demoroot/notebooks/ADES calling Workspace Flow.ipynb
@@ -382,21 +382,19 @@
     "#### Make request to Workspace API using new token\n",
     "\n",
     "As an additional check, we can also use this token with the workspace-api, accessed via the resource-guard.<br>\n",
-    "In this case, by presenting the newly generated access token in the request, the resource-guard does not need to follow the UMA flow - the access token is enough.\n",
-    "\n",
-    "NOTE that, due to a quirk of the header handling in the resource-guard, we pass the access token (RPT) via a cookie alongside a bogus (`XXX`) value for the user ID token to ensure that only the RPT is used for the authorization."
+    "In this case, by presenting the newly generated access token in the request, the resource-guard does not need to follow the UMA flow - the access token is enough, i.e. we already did the hard work by following the UMA flow ourselves."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4f543d1-bae9-4aeb-b17c-980025229263",
+   "id": "2fb6732f-c438-41d4-b63f-44e69c3eb233",
    "metadata": {},
    "outputs": [],
    "source": [
     "headers = {\n",
     "    \"accept\": \"application/json\",\n",
-    "    \"Cookie\": f\"auth_user_id=XXX; auth_rpt-workspace-api={eric_access_token_from_ticket}\"\n",
+    "    \"Authorization\": f\"Bearer {eric_access_token_from_ticket}\"\n",
     "}\n",
     "get_eric_workspace_response = requests.get( workspace_api_eric_endpoint, headers=headers )\n",
     "print(get_eric_workspace_response)\n",
