Improve ADES keycloak section

--- a/demoroot/notebooks/ADES calling Workspace Flow.ipynb
+++ b/demoroot/notebooks/ADES calling Workspace Flow.ipynb
@@ -413,52 +413,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'error': 'invalid_grant', 'error_description': 'Invalid bearer token'}\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'access_token'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[149], line 71\u001B[0m\n\u001B[0;32m     69\u001B[0m tokens \u001B[38;5;241m=\u001B[39m requests\u001B[38;5;241m.\u001B[39mpost(token_endpoint, headers\u001B[38;5;241m=\u001B[39mheaders, data\u001B[38;5;241m=\u001B[39mdata)\u001B[38;5;241m.\u001B[39mjson()\n\u001B[0;32m     70\u001B[0m \u001B[38;5;28mprint\u001B[39m(tokens)\n\u001B[1;32m---> 71\u001B[0m rpt \u001B[38;5;241m=\u001B[39m \u001B[43mtokens\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43maccess_token\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m]\u001B[49m\n\u001B[0;32m     72\u001B[0m \u001B[38;5;28mprint\u001B[39m(rpt)\n",
-      "\u001B[1;31mKeyError\u001B[0m: 'access_token'"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "import requests\n",
     "import urllib3\n",
-    "from getpass import getpass\n",
     "\n",
     "urllib3.disable_warnings()\n",
     "\n",
-    "realm = \"demo\"\n",
+    "realm = \"master\"\n",
     "domain = \"develop.eoepca.org\"\n",
     "auth_server = f\"https://identity.keycloak.{domain}\"\n",
     "dummy_service = f\"https://identity.dummy-service.{domain}\"\n",
     "identity_api = f\"https://identity.api.{domain}\"\n",
     "\n",
-    "# token_endpoint = requests.get(f\"{auth_server}/realms/master/.well-known/openid-configuration\").json()['token_endpoint']\n",
-    "# admin_access_token = requests.post(token_endpoint, data={\n",
-    "#     \"grant_type\": \"password\",\n",
-    "#     \"client_id\": \"admin-cli\",\n",
-    "#     \"username\": \"admin\",\n",
-    "#     \"password\": getpass(\"Admin password: \"),\n",
-    "# }).json()['access_token']\n",
-    "\n",
-    "# Switch to demo realm\n",
-    "token_endpoint = requests.get(f\"{auth_server}/realms/{realm}/.well-known/openid-configuration\").json()['token_endpoint']\n",
-    "\n",
-    "# get token using eoepca-portal client since that's a frontend client where users can sign in\n",
+    "token_endpoint = requests.get(f\"{auth_server}/realms/{realm}/.well-known/openid-configuration\").json()['token_endpoint']"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "92218b2a6abc9516"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Get Eric tokens\n",
+    "Get tokens using eoepca-portal client since that is a frontend client where users can sign in"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e6c941373b4ae5ee"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "eric_tokens = requests.post(token_endpoint, data={\n",
     "    \"grant_type\": \"password\",\n",
     "    \"client_id\": \"eoepca-portal\",\n",
@@ -467,54 +458,136 @@
     "    \"scope\": \"profile email openid\"\n",
     "}).json()\n",
     "eric_access_token = eric_tokens['access_token']\n",
-    "eric_id_token = eric_tokens['id_token']\n",
-    "\n",
-    "# PAT = Protection API Token used to invoke /authz/protection endpoints\n",
-    "# pat = requests.post(token_endpoint, data={\n",
-    "#     \"grant_type\": \"client_credentials\",\n",
-    "#     \"client_id\": \"dummy-service-gatekeeper\",\n",
-    "#     \"client_secret\": \"1eCuvM4Y0VWdbNNcHgMkbdF5hkAO5OJi\"\n",
-    "# }).json()['access_token']\n",
-    "#\n",
-    "# resource_uri = \"/eric/*\"\n",
-    "# resources_endpoint = f\"{auth_server}/realms/{realm}/authz/protection/resource_set?first=0&max=5&uri={resource_uri}\"\n",
-    "# headers = {\n",
-    "#     \"Authorization\": \"Bearer \" + pat\n",
-    "# }\n",
-    "# resources = requests.get(resources_endpoint, headers=headers).json()\n",
-    "# resource_id = resources[0]\n",
-    "# permission_ticket_endpoint = f\"{auth_server}/realms/{realm}/authz/protection/permission\"\n",
-    "# headers = {\n",
-    "#     \"Authorization\": \"Bearer \" + pat\n",
-    "# }\n",
-    "# data = [{\n",
-    "#     \"resource_id\": resource_id,\n",
-    "#     \"resource_scopes\": [\"view\"]\n",
-    "# }]\n",
-    "# ticket = requests.post(permission_ticket_endpoint, headers=headers, json=data).json()['ticket']\n",
-    "\n",
+    "eric_id_token = eric_tokens['id_token']"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c029f43dcdb757e5"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Get RPT using Eric's access token with a permission to 'view' /ericspace/* resoure"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "bb0040d2bc566e9d"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "headers = {\n",
+    "    \"Authorization\": \"Bearer \" + eric_access_token\n",
+    "}\n",
+    "data = {\n",
+    "    \"grant_type\": \"urn:ietf:params:oauth:grant-type:uma-ticket\",\n",
+    "    \"audience\": \"dummy-service\",\n",
+    "    \"permission\": \"/ericspace/*#view\",\n",
+    "    \"permission_resource_format\": \"uri\"\n",
+    "}\n",
+    "tokens = requests.post(token_endpoint, headers=headers, data=data).json()\n",
+    "rpt = tokens['access_token']\n",
+    "print(\"Eric's RPT to access /ericspace/* resource on dummy-service:\")\n",
+    "print(rpt)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "8c43ae1582819f50"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Attempt to get RPT using Eric's id token\n",
+    "Id token is rejected by Keycloak."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "954c8192be0bfdb4"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "headers = {\n",
     "    \"Authorization\": \"Bearer \" + eric_id_token\n",
     "}\n",
     "data = {\n",
     "    \"grant_type\": \"urn:ietf:params:oauth:grant-type:uma-ticket\",\n",
-    "    \"audience\": \"dummy-service-gatekeeper\",\n",
-    "    \"permission\": \"/eric/*\",\n",
-    "    \"permission_resource_format\": \"uri\"\n",
+    "    \"audience\": \"dummy-service\",\n",
+    "    \"permission\": \"/ericspace/*#view\",\n",
+    "    \"permission_resource_format\": \"uri\",\n",
+    "    \"scope\": \"view\"\n",
     "}\n",
-    "tokens = requests.post(token_endpoint, headers=headers, data=data).json()\n",
-    "print(tokens)\n",
-    "rpt = tokens['access_token']\n",
-    "print(rpt)"
+    "reply = requests.post(token_endpoint, headers=headers, data=data).json()\n",
+    "print(reply)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-23T14:24:21.071187700Z",
-     "start_time": "2023-11-23T14:24:20.386365100Z"
-    }
+    "collapsed": false
+   },
+   "id": "458c07c2cebdf6db"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Access /ericspace using access token\n",
+    "Request is successful since Gatekeeper performs the UMA flow itself."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e8fc8d91292d5754"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "headers = {\n",
+    "    \"Authorization\": \"Bearer \" + eric_access_token\n",
+    "}\n",
+    "print(\"Request to \" + dummy_service + \"/ericspace using access token:\")\n",
+    "response = requests.get(dummy_service + \"/ericspace\", headers=headers)\n",
+    "print(response.status_code)"
+   ],
+   "metadata": {
+    "collapsed": false
    },
    "id": "711f19650df536c1"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Access /ericspace using RPT\n",
+    "Request should be successful. Unsure if Gatekeeper still performs the UMA flow or is able to pick the permissions already included on RPT."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "156948aa885d8eb7"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "headers = {\n",
+    "    \"Authorization\": \"Bearer \" + rpt\n",
+    "}\n",
+    "print(\"Request to \" + dummy_service + \"/ericspace using RPT:\")\n",
+    "response = requests.get(dummy_service + \"/ericspace\", headers=headers)\n",
+    "print(response.status_code)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4c6901bf9517a965"
   },
   {
    "cell_type": "code",
@@ -524,7 +597,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "892d00c19f3f9519"
+   "id": "a5e352ac66a55313"
   }
  ],
  "metadata": {
