--- a/demoroot/notebooks/ADES calling Workspace Flow.ipynb
+++ b/demoroot/notebooks/ADES calling Workspace Flow.ipynb
@@ -468,7 +468,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Get RPT using Eric's access token with a permission to 'view' /ericspace/* resoure"
+    "#### Get RPT using Eric's access token with a permission to 'view' /ericspace/* resource"
    ],
    "metadata": {
     "collapsed": false
