--- a/demoroot/notebooks/ADES calling Workspace Flow.ipynb
+++ b/demoroot/notebooks/ADES calling Workspace Flow.ipynb
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "outputs": [],
    "source": [
     "eric_tokens = requests.post(token_endpoint, data={\n",
@@ -461,7 +461,11 @@
     "eric_id_token = eric_tokens['id_token']"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-23T14:53:46.277102400Z",
+     "start_time": "2023-11-23T14:53:46.013219900Z"
+    }
    },
    "id": "c029f43dcdb757e5"
   },
@@ -512,8 +516,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 179,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'error': 'invalid_grant', 'error_description': 'Invalid bearer token'}\n"
+     ]
+    }
+   ],
    "source": [
     "headers = {\n",
     "    \"Authorization\": \"Bearer \" + eric_id_token\n",
@@ -522,14 +534,17 @@
     "    \"grant_type\": \"urn:ietf:params:oauth:grant-type:uma-ticket\",\n",
     "    \"audience\": \"dummy-service\",\n",
     "    \"permission\": \"/ericspace/*#view\",\n",
-    "    \"permission_resource_format\": \"uri\",\n",
-    "    \"scope\": \"view\"\n",
+    "    \"permission_resource_format\": \"uri\"\n",
     "}\n",
     "reply = requests.post(token_endpoint, headers=headers, data=data).json()\n",
     "print(reply)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-23T14:58:20.267619400Z",
+     "start_time": "2023-11-23T14:58:19.909954Z"
+    }
    },
    "id": "458c07c2cebdf6db"
   },
