--- a/demoroot/notebooks/ADES calling Workspace Flow.ipynb
+++ b/demoroot/notebooks/ADES calling Workspace Flow.ipynb
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "eric_tokens = requests.post(token_endpoint, data={\n",
@@ -461,11 +461,7 @@
     "eric_id_token = eric_tokens['id_token']"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-23T14:53:46.277102400Z",
-     "start_time": "2023-11-23T14:53:46.013219900Z"
-    }
+    "collapsed": false
    },
    "id": "c029f43dcdb757e5"
   },
@@ -516,16 +512,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'error': 'invalid_grant', 'error_description': 'Invalid bearer token'}\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "headers = {\n",
     "    \"Authorization\": \"Bearer \" + eric_id_token\n",
@@ -540,11 +528,7 @@
     "print(reply)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-23T14:58:20.267619400Z",
-     "start_time": "2023-11-23T14:58:19.909954Z"
-    }
+    "collapsed": false
    },
    "id": "458c07c2cebdf6db"
   },
