Add keycloak rpt 401 example

--- a/demoroot/notebooks/ADES calling Workspace Flow.ipynb
+++ b/demoroot/notebooks/ADES calling Workspace Flow.ipynb
@@ -489,10 +489,14 @@
     "    \"permission\": \"/ericspace/*#view\",\n",
     "    \"permission_resource_format\": \"uri\"\n",
     "}\n",
-    "tokens = requests.post(token_endpoint, headers=headers, data=data).json()\n",
-    "rpt = tokens['access_token']\n",
-    "print(\"Eric's RPT to access /ericspace/* resource on dummy-service:\")\n",
-    "print(rpt)"
+    "reply = requests.post(token_endpoint, headers=headers, data=data).json()\n",
+    "rpt = None\n",
+    "if not 'access_token' in reply:\n",
+    "    print(str(reply))\n",
+    "else:\n",
+    "    rpt = reply['access_token']\n",
+    "    print(\"Eric's RPT to access /ericspace/* resource on dummy-service:\")\n",
+    "    print(rpt)"
    ],
    "metadata": {
     "collapsed": false
@@ -564,7 +568,7 @@
    "cell_type": "markdown",
    "source": [
     "#### Access /ericspace using RPT\n",
-    "Request should be successful. Unsure if Gatekeeper still performs the UMA flow or is able to pick the permissions already included on RPT."
+    "Request should be successful with 200. Not sure if Gatekeeper still performs the UMA flow or is able to pick the permissions section already included on RPT."
    ],
    "metadata": {
     "collapsed": false
@@ -587,6 +591,34 @@
     "collapsed": false
    },
    "id": "4c6901bf9517a965"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Access /alicespace using the same RPT\n",
+    "Reply should be 401."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "733928a3827cf5b6"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "headers = {\n",
+    "    \"Authorization\": \"Bearer \" + rpt\n",
+    "}\n",
+    "print(\"Request to \" + dummy_service + \"/alicespace using RPT:\")\n",
+    "response = requests.get(dummy_service + \"/alicespace\", headers=headers)\n",
+    "print(response.status_code)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f61e7dd7ad63f907"
   }
  ],
  "metadata": {
