--- a/demoroot/notebooks/ADES calling Workspace Flow.ipynb
+++ b/demoroot/notebooks/ADES calling Workspace Flow.ipynb
@@ -794,8 +794,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting new access token with regular refresh token\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'requests' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mGetting new access token with regular refresh token\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m----> 2\u001B[0m reply \u001B[38;5;241m=\u001B[39m \u001B[43mrequests\u001B[49m\u001B[38;5;241m.\u001B[39mpost(token_endpoint, data\u001B[38;5;241m=\u001B[39m{\n\u001B[0;32m      3\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mgrant_type\u001B[39m\u001B[38;5;124m\"\u001B[39m: \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mrefresh_token\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[0;32m      4\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mclient_id\u001B[39m\u001B[38;5;124m\"\u001B[39m: \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124meoepca-portal\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[0;32m      5\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mrefresh_token\u001B[39m\u001B[38;5;124m\"\u001B[39m: refresh_token\n\u001B[0;32m      6\u001B[0m })\u001B[38;5;241m.\u001B[39mjson()\n\u001B[0;32m      7\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mError message:\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m      8\u001B[0m \u001B[38;5;28mprint\u001B[39m(reply)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'requests' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(\"Getting new access token with regular refresh token\")\n",
     "reply = requests.post(token_endpoint, data={\n",
@@ -806,6 +825,7 @@
     "print(\"Error message:\")\n",
     "print(reply)\n",
     "\n",
+    "print(\"Getting new access token with offline refresh token\")\n",
     "eric_tokens = requests.post(token_endpoint, data={\n",
     "    \"grant_type\": \"refresh_token\",\n",
     "    \"client_id\": \"eoepca-portal\",\n",
@@ -816,7 +836,11 @@
     "print(eric_access_token)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-28T13:15:26.352008500Z",
+     "start_time": "2023-11-28T13:15:26.080120700Z"
+    }
    },
    "id": "b5a4ba4d0e7ab70f"
   },
