--- a/demoroot/notebooks/ADES calling Workspace Flow.ipynb
+++ b/demoroot/notebooks/ADES calling Workspace Flow.ipynb
@@ -840,7 +840,7 @@
     "headers = {\n",
     "    \"Authorization\": \"Bearer \" + eric_access_token\n",
     "}\n",
-    "print(\"Request to \" + dummy_service + \"/ericspace using the acces token generated from the offline token:\")\n",
+    "print(\"Request to \" + dummy_service + \"/ericspace using the access token generated from the offline token:\")\n",
     "response = requests.get(dummy_service + \"/ericspace\", headers=headers)\n",
     "print(response.status_code)"
    ],
