--- a/demoroot/notebooks/ADES calling Workspace Flow.ipynb
+++ b/demoroot/notebooks/ADES calling Workspace Flow.ipynb
@@ -693,7 +693,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Get new a new access token right away to confirm it works\n",
+    "#### Get a new access token right away to confirm it works\n",
     "Notice the client_id which must be the original client_id who the refresh token was issued to."
    ],
    "metadata": {
