Align with main branch

--- a/demoroot/notebooks/01 User Management.ipynb
+++ b/demoroot/notebooks/01 User Management.ipynb
@@ -156,7 +156,7 @@
     "params= {'scope': scope,'response_type': 'code','redirect_uri': redirect_uri_for_github,'acr_values': 'passport_social'}\n",
     "\n",
     "url= service.get_authorize_url(**params)\n",
-    "print(\"Link to Social Passport Login: \")\n",
+    "print(\"Link to Social Passport Login: (Login using GitHub option)\")\n",
     "print(url)"
    ]
   },
@@ -312,7 +312,7 @@
     "#--------------------------\n",
     "data= \"claim_token_format=http://openid.net/specs/openid-connect-core-1_0.html#IDToken&claim_token=\"+alice_id_token+\"&ticket=\"+ticket+\"&grant_type=urn%3Aietf%3Aparams%3Aoauth%3Agrant-type%3Auma-ticket&client_id=\"+client_id+\"&client_secret=\"+client_secret+\"&scope=openid\"\n",
     "rpts_response= requests.post(token_url, data=data, headers=rpt_headers, verify = False)\n",
-    "print(\"Forbidden for non operator user: \" + str(rpts_response))"
+    "print(\"Expected to be forbidden for non operator user (403 code): \" + str(rpts_response))"
    ]
   },
   {
@@ -334,7 +334,7 @@
     "#--------------------------\n",
     "#UPDATE POLICY--> 200\n",
     "#--------------------------\n",
-    "data= {'name':'Updated Policy for Demo Resource','description':'Policy modified for demo purpose','config':{'resource_id':k[\"_id\"] ,'action':'get', 'T&C': [],'rules':[{'OR':[{'EQUAL':{'id':operator_UID}},{'EQUAL':{'id':alice_UID}}]}]},'scopes':['protected_get']}\n",
+    "data= {'name':'Updated Policy for Demo Resource','description':'Policy modified for demo purpose','config':{'resource_id':k[\"_id\"] ,'action':'get','rules':[{'OR':[{'EQUAL':{'id':operator_UID}},{'EQUAL':{'id':alice_UID}}]}]},'scopes':['protected_access']}\n",
     "resp, text= demo.update_policy(pdp_url, data, k[\"_id\"], operator_id_token)\n",
     "print(resp)"
    ]
@@ -377,6 +377,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "82e6349d",
    "metadata": {},
@@ -413,6 +414,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ce90b508",
    "metadata": {},
@@ -424,8 +426,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4a02ee2",
-   "metadata": {},
    "outputs": [],
    "source": [
     "#--------------------------\n",
@@ -440,14 +440,45 @@
     "#PROTECTED ACCESS TO RESOURCE BY NON AUTHENTICATED PERSON-->Query the protected resource to check if the non authenticated person has access (401 expected)\n",
     "#--------------------------\n",
     "a= requests.get(dummy_serv + uri, verify=False)\n",
-    "print(\"Unauthorize access to protected resource (no token passed): \"+ str(a))\n",
+    "print(\"Unauthorize access to protected resource (no token passed), expected 401: \"+ str(a))\n",
     "\n",
     "#--------------------------\n",
     "#OPEN ACCESS TO RESOURCE BY NON AUTHENTICATED PERSON-->Query the protected resource to check if the non authenticated person has access (200 expected)\n",
     "#--------------------------\n",
     "a= requests.get(dummy_serv + open_uri, verify=False)\n",
-    "print(\"Unauthorize access to open resource (no token passed): \"+ str(a))"
-   ]
+    "print(\"Unauthorize access to open resource (no token passed), expected 200: \"+ str(a))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Terms and conditions"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "USER_NAME= \"eric\"\n",
+    "USER_PASSWORD= \"defaultPWD\"\n",
+    "operator_id_token= demo.get_id_token(USER_NAME, USER_PASSWORD)\n",
+    "uri = \"/demo-terms-conditions\"\n",
+    "print(\"dummy_pep_api \" + (dummy_pep_api+'/resources'))\n",
+    "data = '{\"icon_uri\":\"'+uri+'\",\"name\":\"TermsConditionsResource\",\"scopes\":[\"protected_access\"],\"T&C\":{\"term_id\": \"This is a term id\",\"term_description\": \"This is a term description\"}}'\n",
+    "headers = {'Content-Type': 'application/json, Authorization: Bearer '+ operator_id_token}\n",
+    "response = requests.post(dummy_pep_api+'/resources', headers=headers, data=data, verify=False)\n",
+    "print(\"Resource Insertion with code (200 is ok, 422 is resource already inserted): \" + str(response))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
