--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -25,6 +25,7 @@
    "source": [
     "from owslib.csw import CatalogueServiceWeb\n",
     "from owslib.ogcapi.records import Records\n",
+    "from owslib.opensearch import OpenSearch\n",
     "from owslib.fes import And, Or, PropertyIsEqualTo, PropertyIsGreaterThanOrEqualTo, PropertyIsLessThanOrEqualTo, PropertyIsLike, BBox, SortBy, SortProperty\n",
     "from geolinks import sniff_link\n",
     "import folium\n",
@@ -274,7 +275,7 @@
    "outputs": [],
    "source": [
     "for rec in csw.records:\n",
-    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].identification.identtype}\\ntitle: {csw.records[rec].identification.title}\\n')"
+    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].identification[0].identtype}\\ntitle: {csw.records[rec].identification[0].title}\\n')"
    ]
   },
   {
@@ -893,7 +894,7 @@
    "outputs": [],
    "source": [
     "workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-{USER_ERIC}.{base_domain}/csw'\n",
-    "print(f\"Bob's workspace (catalogue): {workspace_endpoint}\")\n",
+    "print(f\"Eric's workspace (catalogue): {workspace_endpoint}\")\n",
     "csw = CatalogueServiceWeb(workspace_endpoint, timeout=30,headers=headers)\n",
     "csw.getrecords2(maxrecords=10)\n",
     "csw.results"
@@ -952,7 +953,7 @@
    "id": "f576e20e-34f2-4add-adb2-872e7ef44049",
    "metadata": {},
    "source": [
-    "Here, the [pyops](https://github.com/devsf/pyops) Python OpenSearch client is used."
+    "Here, the OWSLib OpenSearch client is used."
    ]
   },
   {
@@ -962,17 +963,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyops"
+    "os = OpenSearch(endpoint)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22b62eaa-4984-4ace-9254-c60b9f4be84a",
+   "metadata": {},
+   "source": [
+    "We use the description object to retrieve service metadata."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66a2f60a-01b4-47fe-a014-50700421cd04",
+   "id": "18cf93ee-ffe8-43c2-bb87-8a69a443f04b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = pyops.Client(description_xml_url=endpoint)"
+    "os.description.shortname"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf57b35e-827c-4f2a-90d1-741ab95c7e91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.description.longname"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7532d00-e504-4040-91fe-6dc72d668ea2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.description.description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07ed926d-8b0e-441c-8ea4-a44f3f40bdf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.description.urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14eeca54-7b9d-476d-8b81-21d9d6e93fa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.description.tags"
    ]
   },
   {
@@ -980,7 +1029,7 @@
    "id": "86fff97a-1ec6-4586-ba01-950695f36ed0",
    "metadata": {},
    "source": [
-    "and the number of results is shown (note that the page size is 10 by default)"
+    "Then we perform a search using atom encoding."
    ]
   },
   {
@@ -990,7 +1039,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = client.search()\n",
+    "results = os.search('application/atom+xml')\n",
     "len(results)"
    ]
   },
@@ -1572,6 +1621,150 @@
    "id": "b7999ab0-acc9-4246-b4c6-87588748f972",
    "metadata": {},
    "source": [
+    "### Registration API demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c15d351-3424-48d2-ad6a-9c3ad80992bc",
+   "metadata": {},
+   "source": [
+    "This is an example on how to use the EOEPCA Registration API to register metadata records in the Resource Catalogue."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7971ead5-38c3-4318-a10b-a1da31befe26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import datetime\n",
+    "import time\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf35762d-579f-4aa7-a93d-948574e5df90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_domain = \"demo.eoepca.org\"\n",
+    "# base_domain = \"develop.eoepca.org\"\n",
+    "registration_endpoint = f'https://registration-api-open.{base_domain}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50432710-b002-494d-b5d8-321e388a4c0f",
+   "metadata": {},
+   "source": [
+    "We will now register an ADES instance in the Registration API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb78ecf9-39fc-4516-a6d5-d539ab5715d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{registration_endpoint}/register\",\n",
+    "    json={\n",
+    "        \"type\": \"ades\",\n",
+    "        \"url\": \"https://demo.pygeoapi.io/stable/processes\",\n",
+    "    }\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "921a1af7-47b2-4946-9257-c608166fd3d4",
+   "metadata": {},
+   "source": [
+    "Check if the ADES is actually registered:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a510d41d-703a-4b5a-bbbc-ac604014db08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(3)\n",
+    "response = requests.get(f\"https://resource-catalogue.{base_domain}/collections/metadata:main/items?type=service\", headers=dict(f=\"json\", **headers))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7805f303-48bc-44c8-990c-6656fc197e72",
+   "metadata": {},
+   "source": [
+    "We will now register a STAC Item from the Registration API JSON endpoint."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0da8ed3a-ea63-4571-a5c3-a014ac898cd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url='https://raw.githubusercontent.com/radiantearth/stac-spec/master/examples/core-item.json'\n",
+    "stac_item=requests.get(url).text\n",
+    "#print(stac_item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a45d55e2-eabd-490b-83b2-11b62a22a068",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{registration_endpoint}/register-json\",\n",
+    "    json=json.loads(stac_item)\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47f26d90-4493-4bb4-be7d-772c5e3f80f8",
+   "metadata": {},
+   "source": [
+    "Check if the STAC Item is actually registered:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c5243f9-0905-4fc0-ad57-af5bce4b09fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(3)\n",
+    "response = requests.get(f\"https://resource-catalogue.{base_domain}/collections/metadata:main/items/20201211_223832_CS2\", headers=dict(f=\"json\", **headers))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d71eb629-31ca-436a-8557-548cca3b8e1a",
+   "metadata": {},
+   "source": [
     "### OGC API Records Transactions demo"
    ]
   },
@@ -1704,13 +1897,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Disabled due to POST issue https://github.com/geopython/pycsw/issues/809\n",
-    "#r.collection_item_create(collection_id, data)\n",
+    "r.collection_item_create(collection_id, data)\n",
     "\n",
-    "url = f'{system_catalogue_endpoint}/collections/metadata:main/items'\n",
-    "headers = {'content-type': 'application/geo+json'}\n",
-    "payload = open(record_data)\n",
-    "req = requests.post(url, data=payload, headers=headers)"
+    "# Similar approach using requests\n",
+    "#url = f'{system_catalogue_endpoint}/collections/metadata:main/items'\n",
+    "#headers = {'content-type': 'application/geo+json'}\n",
+    "#payload = open(record_data)\n",
+    "#req = requests.post(url, data=payload, headers=headers)"
    ]
   },
   {
@@ -2147,6 +2340,140 @@
    "source": [
     "print(json.dumps(item.to_dict(), indent=2))\n",
     "#print(item.to_dict())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e678e6a8-0e6e-4067-b21f-b15fa9d32163",
+   "metadata": {},
+   "source": [
+    "### STAC Datacube demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af09c9cf-098f-4c53-81eb-ce0450cf1be3",
+   "metadata": {},
+   "source": [
+    "In this part of the demo, the user will register a STAC Item with datacube extension and use the system level resource catalogue to discover datacube datasets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efade885-f9dc-4808-ab44-2b5e23112cce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import requests\n",
+    "from owslib.ogcapi.records import Records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6221616-d38c-4df2-8f8b-9596ea3bdddd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "record_data = '../data/ESACCI-LC-L4-LCCS-Map-300m-P1Y-2009-v2.0.7cds.json'\n",
+    "base_domain = \"develop.eoepca.org\"\n",
+    "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}'\n",
+    "collection_id = 'metadata:main'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49c17999-d240-432b-a54e-a881a401490e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = Records(system_catalogue_endpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7450b94-4a5d-4047-bf06-69b332873588",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(record_data) as fh:\n",
+    "    data = json.load(fh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49e96d68-adea-4cd2-893b-0bc8e13499ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "identifier = data['id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82a92790-96af-4353-97fe-fb118b231192",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.collection_item_delete(collection_id, identifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c4f0970-c854-4f0c-88fe-6e001442b86d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.collection_item_create(collection_id, data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2787aba-641e-4c60-aa1f-0df77aa4fe65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query = r.collection_items('metadata:main')\n",
+    "my_catalogue_query['numberMatched']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98bfeaf9-6415-4938-8a90-95562226f1e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_cql_text_query = r.collection_items('metadata:main', filter=\"anytext ILIKE '%datacube%'\")\n",
+    "my_catalogue_cql_text_query['numberMatched']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f362f266-9221-42cd-bce7-fa483ff67ebd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_cql_text_query['features'][1]['properties']['title']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a261ca48-23ab-4ce4-8d75-1a62de31615c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_cql_text_query['features'][1]"
    ]
   },
   {
