--- a/demoroot/notebooks/05 Data Access.ipynb
+++ b/demoroot/notebooks/05 Data Access.ipynb
@@ -116,7 +116,7 @@
    "source": [
     "for link in links:\n",
     "    scheme = link['scheme']\n",
-    "    if 'WMS' in scheme:\n",
+    "    if scheme and 'WMS' in scheme:\n",
     "        wms_endpoint=link['url']\n",
     "        print(link['url'])"
    ]
@@ -458,7 +458,7 @@
     "tree = None\n",
     "for link in links:\n",
     "    scheme = link['scheme']\n",
-    "    if 'WCS' in scheme:\n",
+    "    if scheme and 'WCS' in scheme:\n",
     "        print(link['url'])\n",
     "        wcs_endpoint=link['url'].split('?')[0]\n",
     "        wcs_id=link['url'].split('eoid=')[1]\n",
