--- a/demoroot/notebooks/01 User Management Keycloak.ipynb
+++ b/demoroot/notebooks/01 User Management Keycloak.ipynb
@@ -12,6 +12,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "swiss-sender",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "import jwt\n",
@@ -28,28 +35,29 @@
     "platform_domain = f\"identity.keycloak.{base_domain}\"\n",
     "server_url = f\"https://{platform_domain}\"\n",
     "realm = \"master\"\n",
-    "dummy_service_url = f\"https://identity.dummy-service.{base_domain}\"\n",
-    "identity_api_url = f\"https://identity.api.{base_domain}\""
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "swiss-sender"
+    "dummy_service_url = f\"https://dummy-service-protected.{base_domain}\"\n",
+    "identity_api_url = f\"https://identity-api-protected.{base_domain}\""
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "modular-wages",
+   "metadata": {},
    "source": [
     "## Client\n",
     "We instantiate an object to interact with the Keycloak."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "modular-wages"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7ee7baacb5c482e9",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "admin_password = getpass(\"Admin password: \")\n",
@@ -59,64 +67,61 @@
     "    username=\"admin\",\n",
     "    password=admin_password,\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "7ee7baacb5c482e9"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "usual-brazil",
+   "metadata": {},
    "source": [
     "## User Authentication\n",
     "User authenticates and the client receives an ID Token (JWT) that represents the user, and is used to identify the user in UMA authorization flows."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "usual-brazil"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "335052cf756eb435",
+   "metadata": {},
    "source": [
     "#### Create Users\n",
     "Create two users, an Eric and Alice both with user role."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "335052cf756eb435"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "eb038a6adb451cfd",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "eric_id = keycloak.create_user(\"eric\", \"eric\", [\"user\"])\n",
     "print(\"Created Eric user with id: \" + eric_id)\n",
     "alice_id = keycloak.create_user(\"alice\", \"alice\", [\"user\"])\n",
     "print(\"Created Alice user with id: \" + alice_id)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "eb038a6adb451cfd"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "9e613065d80cf314",
+   "metadata": {},
    "source": [
     "#### Inspect Eric User Token"
-   ],
-   "id": "9e613065d80cf314"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "921e1c9077aa789f",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -127,24 +132,25 @@
     "print(\"JWT Header:\\n\" + json.dumps(jwt_header, indent = 2))\n",
     "jwt_payload = jwt.decode(eric_access_token, options={\"verify_signature\": False})\n",
     "print(\"JWT Payload:\\n\" + json.dumps(jwt_payload, indent = 2))"
-   ],
-   "id": "921e1c9077aa789f"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "c55e51a804511ee9",
+   "metadata": {},
    "source": [
     "#### Inspect Alice User Token"
-   ],
-   "id": "c55e51a804511ee9"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8c2546f94a5d45b3",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -155,46 +161,43 @@
     "print(\"JWT Header:\\n\" + json.dumps(jwt_header, indent = 2))\n",
     "jwt_payload = jwt.decode(alice_access_token, options={\"verify_signature\": False})\n",
     "print(\"JWT Payload:\\n\" + json.dumps(jwt_payload, indent = 2))"
-   ],
-   "id": "8c2546f94a5d45b3"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "6b8eb77cdada9cae",
+   "metadata": {},
    "source": [
     "The ID Token (JWT) identifies the user via user_name / sub (Subject) fields, and the client via the aud (Audience) field. The JWT is signed and can be verified, using the kid (Key ID) field, via the JWKS endpoint of the Authorization Server."
-   ],
-   "id": "6b8eb77cdada9cae"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "d0e93be00dd6700",
+   "metadata": {},
    "source": [
     "## Protect resources\n",
     "Access a protected resources using UMA flow."
-   ],
-   "id": "d0e93be00dd6700"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "7aa0ec8b8ca4be2c",
+   "metadata": {},
    "source": [
     "#### Assign premium role to Eric\n",
     "Roles are used to define policies that will protect resources based on roles - Role-based access control (RBAC)"
-   ],
-   "id": "7aa0ec8b8ca4be2c"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "46f22fc71441cea3",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -202,23 +205,27 @@
     "print(\"Created realm role: \" + realm_role)\n",
     "keycloak.assign_realm_roles_to_user(eric_id, realm_role)\n",
     "print(\"Assigned \" + realm_role + \" role to Eric\")"
-   ],
-   "id": "46f22fc71441cea3"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "6aaea97b832109de",
+   "metadata": {},
    "source": [
     "#### Register client\n",
     "Register demo client"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "6aaea97b832109de"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4fe07e7d91f6a305",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "client_id = \"demo\"\n",
@@ -234,38 +241,37 @@
     "}\n",
     "keycloak.create_client(client_payload, skip_exists=True)\n",
     "print(\"Created client: demo\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "4fe07e7d91f6a305"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "c97a13a7a2f6ef33",
+   "metadata": {},
    "source": [
     "## Protect URIs\n",
     "Right now, resources are protected by a default policy, which grants access to users within the realm.\n",
     "Let's see how Keycloak protects resources using role based and user based policies."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "c97a13a7a2f6ef33"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "26005c28ccb2b3db",
+   "metadata": {},
    "source": [
     "#### Register resources\n",
     "Register"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "26005c28ccb2b3db"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "58fb6be6f37aa7d5",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "resources = [\n",
@@ -286,26 +292,27 @@
     "    }\n",
     "]\n",
     "keycloak.register_resources(client_id, resources, skip_exists=True)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "58fb6be6f37aa7d5"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "fe588d65f686c530",
+   "metadata": {},
    "source": [
     "#### Register policies\n",
     "Register role based and user based policies"
-   ],
-   "id": "fe588d65f686c530"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7528a876ea5475cd",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "policy = {\n",
@@ -335,28 +342,26 @@
     "p = keycloak.register_user_policy(client_id, policy)\n",
     "print(\"Only Alice User Policy:\")\n",
     "print(p)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "7528a876ea5475cd"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "b39fd78912559132",
+   "metadata": {},
    "source": [
     "#### Register resource permissions\n",
     "Resources permissions are set by assigning policies to resources."
-   ],
-   "id": "b39fd78912559132"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7db3855970e19275",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -400,57 +405,51 @@
     "]\n",
     "r = keycloak.assign_resources_permissions(client_id, permissions, skip_exists=True)\n",
     "print(r)"
-   ],
-   "id": "7db3855970e19275"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "6e261ef73b519122",
+   "metadata": {},
    "source": [
     "#### Get PAT (Protection API token)\n",
     "PAT (Protection API token) is used to access Keycloak's Protection API, which manages resources and policies."
-   ],
-   "id": "6e261ef73b519122"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7ec0f40884afcb2b",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
     "pat = keycloak.generate_protection_pat(client_id, client_secret)\n",
     "print(json.dumps(pat, indent=2))\n",
     "access_token = pat['access_token']"
-   ],
-   "id": "7ec0f40884afcb2b"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [],
-   "id": "73ece8c827858c3c"
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "5163d45ac003fcf4",
+   "metadata": {},
    "source": [
     "### Get Resource Ids"
-   ],
-   "id": "5163d45ac003fcf4"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fad25c0c5306f93f",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -461,24 +460,25 @@
     "print(\"Eric resource: \" + eric_resource_id)\n",
     "alice_resource_id = keycloak.get_resource_id(client_id=client_id, client_secret=client_secret, uri=\"/alice/*\")[0]\n",
     "print(\"Alice resource: \" + alice_resource_id)"
-   ],
-   "id": "fad25c0c5306f93f"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "7bd8995d56fd1161",
+   "metadata": {},
    "source": [
     "#### Get UMA access token for eric space resource for both Eric and Alice"
-   ],
-   "id": "7bd8995d56fd1161"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8fad04726762f1a9",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -487,14 +487,17 @@
     "eric_access_token = keycloak.get_user_token(\"eric\", \"eric\")['access_token']\n",
     "eric_rpt = keycloak.get_rpt(client_id=client_id, client_secret=client_secret, uri=\"/eric/*\", token=eric_access_token, ticket=uma_ticket)['access_token']\n",
     "print('\\nEric RPT:\\n' + str(eric_rpt))"
-   ],
-   "id": "8fad04726762f1a9"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8d3dee0644cb9c35",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -505,32 +508,34 @@
     "    alice_uma_access_token = keycloak.get_rpt(client_id=client_id, client_secret=client_secret, uri=\"/eric/*\", token=alice_access_token, ticket=uma_ticket)['access_token']\n",
     "except KeycloakPostError as e:\n",
     "    print(str(e))"
-   ],
-   "id": "8d3dee0644cb9c35"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "2a47860a5bd76bb0",
+   "metadata": {},
    "source": [
     "Trying to get a UMA token for Alice results in a 403 Forbidden Error. The reason being Alice is not allowed to access the `/eric/*` resource because it's protected for only `eric` user."
-   ],
-   "id": "2a47860a5bd76bb0"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "302b4f2d2c1c26bb",
+   "metadata": {},
    "source": [
     "#### Use Eric UMA access token to access the eric space resource"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "302b4f2d2c1c26bb"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "59e15ffd964b97a7",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "resources = [\n",
@@ -600,11 +605,7 @@
     "print('GET ' + url)\n",
     "response = requests.get(url, headers=headers, verify=False)\n",
     "print(str(response.status_code))"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "59e15ffd964b97a7"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -616,13 +617,11 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bebac6c99d367ed4",
+   "metadata": {},
    "source": [
     "#### Get Resources"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "bebac6c99d367ed4"
+   ]
   },
   {
    "cell_type": "code",
@@ -681,6 +680,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0a80867f",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "access_token = keycloak.get_user_token(\"admin\", admin_password)[\"access_token\"]\n",
@@ -701,21 +707,15 @@
     "print(\"POST \" + url)\n",
     "print(str(response.status_code))\n",
     "print(json.dumps(response.json(), indent=2))"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "0a80867f"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "9f3ca985185431c2",
+   "metadata": {},
    "source": [
     "#### Update resource"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "9f3ca985185431c2"
+   ]
   },
   {
    "cell_type": "code",
@@ -1405,18 +1405,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "47537fc25108b375",
+   "metadata": {},
    "source": [
     "## Bash Script\n",
     "Execute script to create a client with protected resources"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "47537fc25108b375"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "632f4cc7f6699dfe",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "import subprocess\n",
@@ -1448,26 +1453,25 @@
     "\n",
     "#r = subprocess.run(script_args, shell=True, text=True, capture_output=True)\n",
     "#print(r)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "632f4cc7f6699dfe"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "id": "4503018abf176648",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "id": "4503018abf176648"
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1481,7 +1485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
