--- a/demoroot/notebooks/01 User Management Keycloak.ipynb
+++ b/demoroot/notebooks/01 User Management Keycloak.ipynb
@@ -31,12 +31,11 @@
     "\n",
     "urllib3.disable_warnings()\n",
     "\n",
-    "base_domain = \"demo.eoepca.org\"\n",
-    "platform_domain = f\"identity.keycloak.{base_domain}\"\n",
-    "server_url = f\"https://{platform_domain}\"\n",
+    "base_domain = \"192-168-49-2.nip.io\"\n",
+    "keycloak_url = f\"http://keycloak.{base_domain}\"\n",
     "realm = \"master\"\n",
-    "dummy_service_url = f\"https://dummy-service-protected.{base_domain}\"\n",
-    "identity_api_url = f\"https://identity-api-protected.{base_domain}\""
+    "dummy_service_url = f\"http://dummy-service.{base_domain}\"\n",
+    "identity_api_url = f\"http://identity-api.{base_domain}\""
    ]
   },
   {
@@ -62,7 +61,7 @@
    "source": [
     "admin_password = getpass(\"Admin password: \")\n",
     "keycloak = KeycloakClient(\n",
-    "    server_url=server_url,\n",
+    "    server_url=keycloak_url,\n",
     "    realm=realm,\n",
     "    username=\"admin\",\n",
     "    password=admin_password,\n",
@@ -155,7 +154,7 @@
    "outputs": [],
    "source": [
     "token = keycloak.get_user_token(\"alice\", \"alice\")\n",
-    "print(\"Eric token:\\n\" + json.dumps(token, indent = 2))\n",
+    "print(\"Alice token:\\n\" + json.dumps(token, indent = 2))\n",
     "alice_access_token = token[\"access_token\"]\n",
     "jwt_header = jwt.get_unverified_header(alice_access_token)\n",
     "print(\"JWT Header:\\n\" + json.dumps(jwt_header, indent = 2))\n",
@@ -905,7 +904,9 @@
    "id": "43f7dbc7",
    "metadata": {},
    "source": [
-    "#### Create group policy"
+    "#### Create group policy\n",
+    "\n",
+    "TODO - group ID is hardcoded - should create a group and get the id"
    ]
   },
   {
@@ -915,24 +916,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "access_token = keycloak.get_user_token(\"admin\", admin_password)[\"access_token\"]\n",
-    "headers = {\n",
-    "    \"Authorization\": \"Bearer \" + access_token\n",
-    "}\n",
-    "# TODO should create a group and get the id\n",
-    "data = {\n",
-    "    \"logic\": \"POSITIVE\",\n",
-    "    \"decisionStrategy\": \"UNANIMOUS\",\n",
-    "    \"name\": \"Group policy\",\n",
-    "    \"groups\": [\"6d3614b0-b54b-4d42-811d-625425aa9e1a\"],\n",
-    "    \"groupsClaim\": \"Groups claim\",\n",
-    "    \"description\": \"description\"\n",
-    "}\n",
-    "url = identity_api_url + \"/\" + client_id + \"/policies/group\"\n",
-    "response = requests.post(url, json=data, headers=headers)\n",
-    "print(\"POST \" + url)\n",
-    "print(str(response.status_code))\n",
-    "print(json.dumps(response.json(), indent=2))"
+    "# access_token = keycloak.get_user_token(\"admin\", admin_password)[\"access_token\"]\n",
+    "# headers = {\n",
+    "#     \"Authorization\": \"Bearer \" + access_token\n",
+    "# }\n",
+    "# # TODO should create a group and get the id\n",
+    "# data = {\n",
+    "#     \"logic\": \"POSITIVE\",\n",
+    "#     \"decisionStrategy\": \"UNANIMOUS\",\n",
+    "#     \"name\": \"Group policy\",\n",
+    "#     \"groups\": [\"6d3614b0-b54b-4d42-811d-625425aa9e1a\"],\n",
+    "#     \"groupsClaim\": \"Groups claim\",\n",
+    "#     \"description\": \"description\"\n",
+    "# }\n",
+    "# url = identity_api_url + \"/\" + client_id + \"/policies/group\"\n",
+    "# response = requests.post(url, json=data, headers=headers)\n",
+    "# print(\"POST \" + url)\n",
+    "# print(str(response.status_code))\n",
+    "# print(json.dumps(response.json(), indent=2))"
    ]
   },
   {
@@ -1409,6 +1410,9 @@
    "metadata": {},
    "source": [
     "## Bash Script\n",
+    "\n",
+    "TODO - this won't work due to other dependencies needing to be fetched and installed.\n",
+    "\n",
     "Execute script to create a client with protected resources"
    ]
   },
@@ -1428,45 +1432,35 @@
     "import urllib.request\n",
     "\n",
     "with urllib.request.urlopen(\n",
-    "        \"https://raw.githubusercontent.com/EOEPCA/um-identity-service/master/scripts/create-client.sh\") as f:\n",
+    "        \"https://raw.githubusercontent.com/EOEPCA/deployment-guide/main/deploy/bin/create-client\") as f:\n",
     "    script = f.read().decode('utf-8')\n",
-    "    out = open(\"create-client.sh\", \"w\")\n",
+    "    out = open(\"create-client\", \"w\")\n",
     "    out.write(script)\n",
     "    out.flush()\n",
     "\n",
     "access_token = keycloak.get_user_token(\"admin\", admin_password)[\"access_token\"]\n",
     "\n",
-    "client_id = input(\"Client id: \")\n",
-    "client_name = \"Test client\"\n",
-    "client_description = \"Test client from demo notebook\"\n",
-    "\n",
-    "script_args = [\"create-client.sh\",\n",
-    "                       \"-e develop\",\n",
-    "                       \"-t \" + access_token,\n",
-    "                       \"--id=\" + \"\\\"\" + client_id + \"\\\"\",\n",
-    "                       \"--name=\" + \"\\\"\" + client_name + \"\\\"\" ,\n",
-    "                       \"--description=\" + \"\\\"\" + client_description + \"\\\"\" ,\n",
-    "                       \"--resource=\\\"Eric space\\\"\", \"--uris=/ericspace/*\", \"--users=eric\",\n",
-    "                       \"--resource=\\\"Alice space\\\"\", \"--uris=/alicespace/*\", \"--users=alice\"\n",
+    "script_args = [\n",
+    "    \"bash\",\n",
+    "    \"create-client\",\n",
+    "    \"-a\", keycloak_url,\n",
+    "    \"-i\", identity_api_url,\n",
+    "    \"-r\", realm,\n",
+    "    \"-u\", \"admin\",\n",
+    "    \"-p\", admin_password,\n",
+    "    \"-c\", \"admin-cli\",\n",
+    "    \"--id=test-client\",\n",
+    "    \"--name='Test Client'\",\n",
+    "    \"--secret=changeme\",\n",
+    "    \"--description='Test client from demo notebook'\",\n",
+    "    \"--resource='Eric Space'\", \"--uris='/ericspace/*'\", \"--scopes=view\", \"--users=eric\",\n",
+    "    \"--resource='Alice Space'\", \"--uris='/alicespace/*'\", \"--scopes=view\", \"--users=alice\"\n",
     "]\n",
     "print(\"Executing script:\\n\" + ' '.join(script_args) + '\\n')\n",
     "\n",
-    "#r = subprocess.run(script_args, shell=True, text=True, capture_output=True)\n",
-    "#print(r)"
+    "# r = subprocess.run(script_args, shell=True, text=True, capture_output=True)\n",
+    "# print(r)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4503018abf176648",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
